Adding new sources to pacman.conf.

--- a/modules/so/archlinux/dist-root/etc/pacman.conf
+++ b/modules/so/archlinux/dist-root/etc/pacman.conf
@@ -1,4 +1,5 @@
 [options]
+
 HoldPkg     = pacman glibc
 SyncFirst   = pacman
 Architecture = auto
@@ -17,9 +18,14 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#SigLevel = PackageOptional
-#Include = /etc/pacman.d/mirrorlist
+[multilib-testing]
+Include = /etc/pacman.d/mirrorlist
+
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 [archlinuxfr]
 Server = http://repo.archlinux.fr/$arch
+
+#[haskell]
+#Server = http://xsounds.org/~haskell/$arch
