--- a/.gitmodules
+++ b/.gitmodules
@@ -49,6 +49,6 @@
 [submodule "modules/shssword/dist/.dotbin/shssword"]
 	path = modules/shssword/dist/.dotbin/shssword
 	url = git://github.com/dgvncsz0f/shssword.git
-[submodule "modules/shssword/dist/.dotbin/dzen-tools"]
-	path = modules/shssword/dist/.dotbin/dzen-tools
+[submodule "modules/dzen-tools/dist/.dotbin/dzen-tools"]
+	path = modules/dzen-tools/dist/.dotbin/dzen-tools
 	url = git://github.com/dgvncsz0f/dzen-tools.git
