Ignoring awesome for a while.

--- a/modules/so/archlinux/dist-root/etc/pacman.conf
+++ b/modules/so/archlinux/dist-root/etc/pacman.conf
@@ -5,6 +5,7 @@ SyncFirst   = pacman
 Architecture = auto
 CheckSpace
 SigLevel = Never
+IgnorePkg = awesome
 
 [testing]
 Include = /etc/pacman.d/mirrorlist
