--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "modules/dzen-tools/dist/.dotbin/dzen-tools"]
 	path = modules/dzen-tools/dist/.dotbin/dzen-tools
 	url = git://github.com/dgvncsz0f/dzen-tools.git
+[submodule "modules/editor/vim/plugins/unite/dist/.vim/bundles/unite"]
+	path = modules/editor/vim/plugins/unite/dist/.vim/bundles/unite
+	url = https://github.com/Shougo/unite.vim
