--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,9 @@
 [submodule "modules/editor/vim/plugins/golang/dist/.vim/bundles/golang"]
 	path = modules/editor/vim/plugins/golang/dist/.vim/bundles/golang
 	url = git@github.com:jnwhiteh/vim-golang.git
+[submodule "modules/editor/vim/plugins/syntastic/dist/.vim/bundles/vimpress"]
+	path = modules/editor/vim/plugins/syntastic/dist/.vim/bundles/vimpress
+	url = git@github.com:vim-scripts/VimRepress.git
+[submodule "modules/editor/vim/plugins/vimpress/dist/.vim/bundles/vimpress"]
+	path = modules/editor/vim/plugins/vimpress/dist/.vim/bundles/vimpress
+	url = git@github.com:vim-scripts/VimRepress.git
