--- a/modules/netctl/dist-root/etc/netctl/wpa.conf
+++ b/modules/netctl/dist-root/etc/netctl/wpa.conf
@@ -4,6 +4,6 @@ IP=dhcp
 IP6=no
 Auth8021X=yes
 TimeoutDHCP=60
-# ExecUpPost="iptables-restore </etc/firewall"
+ExecUpPost="iptables-restore </etc/firewall"
 WPADriver=wired
 WPAConfigFile=/etc/netctl/wpa_supplicant.conf
