Splits archlinux rc.conf by bundle.

--- a/bundles/pothix@mordor/archlinux_rcconf/dist-root/etc/rc.conf
+++ b/bundles/pothix@mordor/archlinux_rcconf/dist-root/etc/rc.conf
@@ -17,16 +17,16 @@ USECOLOR="yes"
 
 # HARDWARE
 # --------
-MODULES=(microcode)
+MODULES=()
 USEDMRAID="no"
 USEBTRFS="no"
 USELVM="no"
 
 # NETWORKING
 # ----------
-HOSTNAME=gondor
+HOSTNAME=mordor
 NETWORK_PERSIST="no"
 
 # DAEMONS
 # -------
-DAEMONS=(hwclock syslog-ng dbus acpid crond @laptop-mode @networkmanager)
+DAEMONS=(hwclock syslog-ng dbus acpid crond)
