Franz is not open source. :thumbsdown:
rambox to the rescue

--- a/modules/X11/xfce4/panel/xfce4-hardware-monitor-plugin-26.rc
+++ b/modules/X11/xfce4/panel/xfce4-hardware-monitor-plugin-26.rc
@@ -20,7 +20,7 @@ viewer_text_overlay_color=-1347440641
 type=network_load
 interface_type=5
 interface_direction=0
-max=823271
+max=1210773
 tag=
 color=1566228912
 
