Add steam to gondor

--- a/modules/so/archlinux/pacman/dist-root/etc/pacman.conf
+++ b/modules/so/archlinux/pacman/dist-root/etc/pacman.conf
@@ -90,8 +90,8 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 [repo-ck]
 Server = http://repo-ck.com/$arch
