Commenting repo-ck out

--- a/modules/so/archlinux/pacman/dist-root/etc/pacman.conf
+++ b/modules/so/archlinux/pacman/dist-root/etc/pacman.conf
@@ -93,5 +93,5 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-[repo-ck]
-Server = http://repo-ck.com/$arch
+#[repo-ck]
+#Server = http://repo-ck.com/$arch
